[ims-30] - getFile&deleteFile in timelineEvent controller
