# ims-server/src/Swagger.json
@@ -247,6 +247,72 @@
                 }
             }
         },
+        "/timelineEvent/getFile/{id}": {
+            "get": {
+                "tags": [
+                    "timelineEvent"
+                ],
+                "description": "get a file of a timeline event by id and index",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path"
+                    },
+                    {
+                        "name":"index",
+                        "in":"query",
+                        "required":true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "404": {
+                        "description": "not found"
+                    },
+                    "400":{
+                        "description":"BAD_REQUEST"
+                    },
+                    "500":{
+                        "description":"server error"
+                    }
+                }
+            }
+        },
+        "/timelineEvent/deleteFile/{id}": {
+            "delete": {
+                "tags": [
+                    "timelineEvent"
+                ],
+                "description": "delete a file of a timeline event by id and index",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path"
+                    },
+                    {
+                        "name":"index",
+                        "in":"query",
+                        "required":true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "404": {
+                        "description": "not found"
+                    },
+                    "400":{
+                        "description":"BAD_REQUEST"
+                    },
+                    "500":{
+                        "description":"server error"
+                    }
+                }
+            }
+        },
         "components": {
             "schemas": {
                 "Tag": {
