# ims-server/src/controllers/TimelineEventController.ts
@@ -1,10 +1,11 @@
 import { ITimelineEvent } from "../interfaces/ItimelineEvent";
 import { constants } from "../loggers/constants";
-import timelineEvent, { TimelineEventSchema } from "../models/timelineEvent";
-import express, { Request, Response } from 'express';
+import { Request, Response, request, response } from 'express';
 import timelineEventService from "../services/timelineEventService";
 import logger from "../loggers/log";
-
+import fs from 'fs';
+import path from 'path';
+import axios from 'axios';
 
 export default class TimelineEventController {
 
@@ -12,7 +13,7 @@ export default class TimelineEventController {
         try {
             const timelineEvents: ITimelineEvent[] | null = await timelineEventService.getAllTimelineEvents();
             if (timelineEvents instanceof Error) {
-                res.status(404).json({ message: timelineEvent, error: true });
+                res.status(404).json({ message: timelineEvents, error: true });
             }
             else res.status(200).json(timelineEvents);
         } catch (error: any) {
@@ -25,21 +26,17 @@ export default class TimelineEventController {
             const _timelineEvent = await timelineEventService.addTimelineEvent(req.body);
             if (_timelineEvent instanceof Error) {
                 res.status(500).json({ message: _timelineEvent });
-                console.log("from try")
             }
             else res.status(201).json(_timelineEvent);
-            console.log("from try")
         } catch (error: any) {
-            console.log("from catch")
-
             res.status(500).json({ message: error.message });
         }
     }
 
     async deleteTimelineEvent(req: Request, res: Response): Promise<void> {
         try {
-            const _timelineEvent:ITimelineEvent|null = await timelineEventService.deleteTimelineEvent(req.params.id);
-            if (_timelineEvent instanceof Error || _timelineEvent===null ) {
+            const _timelineEvent: ITimelineEvent | null = await timelineEventService.deleteTimelineEvent(req.params.id);
+            if (_timelineEvent instanceof Error || _timelineEvent === null) {
                 res.status(404).send({ message: constants.NOT_FOUND, error: true })
             }
             else {
@@ -48,6 +45,77 @@ export default class TimelineEventController {
         }
         catch (error: any) {
             res.status(500).send({ message: error, error: true })
+        }
+    }
+
+    async updateTimelineEvent(req: Request, res: Response): Promise<void> {
+        try {
+            const _timelineEvent = await timelineEventService.updateTimelineEvent(req.params.id, req.body);
+            if (_timelineEvent instanceof Error) {
+                if (_timelineEvent.message === constants.MISSNG_REQUIRED_FIELDS) {
+                    res.status(422).json({ message: constants.MISSNG_REQUIRED_FIELDS, error: true });
+                } else if (_timelineEvent.message === constants.NOT_FOUND) {
+                    res.status(404).json({ message: constants.NOT_FOUND });
+                } else {
+                    res.status(500).json({ message: _timelineEvent, error: true });
+                }
+            }
+            else {
+                res.status(200).json(_timelineEvent);
+            }
+        } catch (error: any) {
+            res.status(500).json({ message: error.message, error: true });
+        }
+    }
+
+    async getTimelineEventById(req: Request, res: Response): Promise<void> {
+        try {
+            const _timelineEvent: ITimelineEvent | null = await timelineEventService.getTimelineEventById(req.params.id);
+            if (_timelineEvent instanceof Error || _timelineEvent === null) {
+                res.status(404).json({ message: constants.NOT_FOUND, error: true });
+            }
+            else res.status(200).json(_timelineEvent);
+        } catch (error: any) {
+            res.status(500).json({ message: error });
+        }
+    }
+
+    async getFileInTimelineEventByIndex(req: Request, res: Response): Promise<Response> {
+        try {
+            const timelineEvent: ITimelineEvent | null = await timelineEventService.getTimelineEventById(req.params.id);
+            const index: number | null = parseInt(req.query.index as string);
+            if (timelineEvent instanceof Error || timelineEvent === null) {
+                return res.status(404).json({ message: constants.NOT_FOUND, timelineEventId: req.params.id });
+            }
+            const files: string[] = timelineEvent.files;
+            if (!(typeof index === 'number' && !isNaN(index)) || files.length === 0 || index < 0 || index >= files.length) {
+                return res.status(400).json({ message: constants.BAD_REQUEST, error: constants.INDEX_NOT_VALID });
+            }
+            return res.status(200).json(files[index])
+        } catch (error: any) {
+            return res.status(500).json({ message: error });
+        }
+    }
+
+    async deleteFileInTimelineEventByIndex(req: Request, res: Response): Promise<Response> {
+        try {
+            const timelineEvent: ITimelineEvent | null = await timelineEventService.getTimelineEventById(req.params.id);
+            const index: number | null = parseInt(req.query.index as string);
+            if (timelineEvent instanceof Error || timelineEvent === null) {
+                return res.status(404).json({ message: constants.NOT_FOUND, timelineEventId: req.params.id });
+            }
+            const files: string[] = timelineEvent.files;
+            if (!(typeof index === 'number' && !isNaN(index)) || files.length === 0 || index < 0 || index >= files.length) {
+                return res.status(400).json({ message: constants.BAD_REQUEST, error: constants.INDEX_NOT_VALID });
+            }
+            timelineEvent.files.splice(index, 1);
+            const updateTimelineEvent: ITimelineEvent | null = await timelineEventService.updateTimelineEvent(req.params.id, timelineEvent)
+            if (updateTimelineEvent instanceof Error) {
+                return res.status(500).json({ message: updateTimelineEvent, error: true });
+            }
+            return res.status(200).json(timelineEvent);
+        } catch (error: any) {
+            return res.status(500).json({ message: error });
         }
     }
 
