# ims-server/src/routes/timelineEventRouter.ts
@@ -9,4 +9,7 @@ router.get('/', timelineEventController.getAllTimelineEvents)
 router.post('/', timelineEventController.addTimelineEvent)
 router.delete('/:id',timelineEventController.deleteTimelineEvent)
 
+router.get('/getFile/:id',timelineEventController.getFileInTimelineEventByIndex)
+router.delete('/deleteFile/:id',timelineEventController.deleteFileInTimelineEventByIndex)
+
 export default router;
